--- a/Construindo páginas para internet com Bootstrap/index.html
+++ b/Construindo páginas para internet com Bootstrap/index.html
@@ -10,34 +10,27 @@
         <nav class="navbar navbar-expand-lg bg-light">
               <a class="navbar-brand" href="https://google.com/"><img src="img/download.png"></a>
               <div class="collapse navbar-collapse">
-                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                <ul class="navbar-nav">
                   <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="#">Quem somos</a>
+                    <a class="nav-link active" href="#">Quem somos</a>
                   </li>
                   <li class="nav-item">
                     <a class="nav-link" href="#">Parceiros</a>
                   </li>
-                  <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                      Serviços
-                    </a>
-                    <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                      <li><a class="dropdown-item" href="#">LinkedIn</a></li>
-                      <li><a class="dropdown-item" href="#">Github</a></li>
-                      <li><hr class="dropdown-divider"></li>
-                      <li><a class="dropdown-item" href="#">Something else here</a></li>
-                    </ul>
-                  </li>
                   <li class="nav-item">
-                    <a class="nav-link disabled"></a>
+                    <a class="nav-link" href="#">Serviços</a>
                   </li>
                 </ul>
                 <form class="d-flex" role="search">
-                  <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-                  <button class="btn btn-outline-success" type="submit">Search</button>
-                </form>
               </div>
           </nav>
+          
+          <section id="Quemsomos">
+              <div class="container-fluid quem-somos text-center margin">
+                <h3>Quem somos</h3>
+                <img src="img/images.jpg">
+              </div>
+          </section>
 
     </body>
 </html>
