correção aplicada em padding

--- a/Construindo páginas para internet com Bootstrap/index.html
+++ b/Construindo páginas para internet com Bootstrap/index.html
@@ -7,15 +7,17 @@
         <link rel="stylesheet" type="text/css" href="css/style.css">
     </head>
     <body>
-        <nav class="navbar navbar-expand-lg bg-light margin">
-              <a class="navbar-brand" href="https://google.com/"><img src="img/download.png"></a>
+        <nav class="navbar navbar-expand-lg navbar-light margin">
+              <a class="navbar-brand" href="https://google.com/">
+                  <img class="nav-image" src="img/download.png" width="50" height="50">
+              </a>
               <div class="collapse navbar-collapse">
                 <ul class="navbar-nav">
                   <li class="nav-item">
-                    <a class="nav-link active" href="#Quemsomos">Quem somos</a>
+                    <a class="nav-link" href="#quemsomos">Quem somos</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#">Parceiros</a>
+                    <a class="nav-link" href="#parceiros">Parceiros</a>
                   </li>
                   <li class="nav-item">
                     <a class="nav-link" href="#">Serviços</a>
@@ -24,13 +26,20 @@
               </div>
           </nav>
           
-          <section id="Quemsomos">
+          <section id="quemsomos">
               <div class="container-fluid quem-somos text-center margin">
-                <h3>Quem somos</h3>
+                <h3 class="margin">Quem somos</h3>
                 <img src="img/images.jpg" class="rounded-circle" height="400" width="400">
                 <h3>Somos um time comprometido com os resultados</h3>
               </div>
           </section>
+
+          <selection id="parceiros">
+              <div class="container-fluid text-center margin parceiros">
+                  <h3>PARCEIROS</h3>
+
+              </div>
+          </selection>
 
     </body>
 </html>
