--- a/Construindo páginas para internet com Bootstrap/index.html
+++ b/Construindo páginas para internet com Bootstrap/index.html
@@ -9,7 +9,7 @@
     <body>
         <nav class="navbar navbar-expand-lg navbar-light margin">
               <a class="navbar-brand" href="https://google.com/">
-                  <img class="nav-image" src="img/download.png" width="50" height="50">
+                  <img class="nav-image" src="img/tri.png" width="120" height="100">
               </a>
               <div class="collapse navbar-collapse">
                 <ul class="navbar-nav">
@@ -20,7 +20,7 @@
                     <a class="nav-link" href="#parceiros">Parceiros</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#">Serviços</a>
+                    <a class="nav-link" href="#servicos">Serviços</a>
                   </li>
                 </ul>
               </div>
@@ -29,17 +29,53 @@
           <section id="quemsomos">
               <div class="container-fluid quem-somos text-center margin">
                 <h3 class="margin">Quem somos</h3>
-                <img src="img/images.jpg" class="rounded-circle" height="400" width="400">
-                <h3>Somos um time comprometido com os resultados</h3>
+                <img src="img/reunião.webp" class="rounded-circle" height="400" width="400">
+                <h3 class="txt">Somos um time comprometido com os resultados</h3>
               </div>
           </section>
 
-          <selection id="parceiros">
+          <section id="parceiros">
               <div class="container-fluid text-center margin parceiros">
-                  <h3>PARCEIROS</h3>
+                  <h3 class="margin">PARCEIROS</h3>
+                  <div class="container">
+                      <div class="row">
+                          <div class="col-lg-4">
+                            <img src="img/carro1.png" width="100%">
+                          </div>
+                          <div class="col-lg-4">
+                              <img src="img/carro1.png" width="100%">
+                          </div>
+                          <div class="col-lg-4">
+                            <img src="img/carro1.png" width="100%">
+                      </div>
+                      </div>
+                  </div>
 
               </div>
-          </selection>
+          </section>
+
+          <section id="servicos"> 
+              <div class="container-fluid text-center margin servicos">
+                  <h3 class="margin">SERVIÇOS</h3>
+                  <div class="container">
+                     <div class="row">
+                          <div class="col-lg-6">
+                              <p>Lorem ipsum pharetra vulputate, fringilla netus. </p>
+                              <img src="img/carro1.png" width="100%">
+                          </div>
+                          <div class="col-lg-6">
+                              <p>Lorem ipsum pharetra vulputate, fringilla netus. </p>
+                              <img src="img/carro1.png" width="100%">
+                          </div>
+                    </div>
+                  </div>
+              </div>
+
+          </section>
+
+          <footer class="container-fluid text-center bg-footer margin">
+              <p>Desenvolvido por Talysson Amorim</p>
+          </footer>
 
     </body>
 </html>
